--- a/public/index.html
+++ b/public/index.html
@@ -4,12 +4,13 @@
 	<meta charset='utf-8'>
 	<meta name='viewport' content='width=device-width,initial-scale=1'>
 
-	<title>Svelte app</title>
+	<title>Budget Calculator</title>
 
 	<link rel='icon' type='image/png' href='/favicon.png'>
 	<link rel='stylesheet' href='/global.css'>
 	<link rel='stylesheet' href='/build/bundle.css'>
 
+	<script src="https://kit.fontawesome.com/e314ed54a5.js" crossorigin="anonymous"></script>
 	<script defer src='/build/bundle.js'></script>
 </head>
 
